update #3 profile update and display, password reset through email and dismiss notifications using swipe gesture.

--- a/app/src/main/res/layout/fragment_open_chat_item.xml
+++ b/app/src/main/res/layout/fragment_open_chat_item.xml
@@ -16,24 +16,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <ImageView
-            android:id="@+id/userImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"/>
-
-
         <TextView
             android:id="@+id/contactNameTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/userImageView"
-            android:layout_toRightOf="@id/userImageView"
             android:layout_marginTop="@dimen/text_margin"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:text="Kamo Kamo"
+            android:layout_marginStart="16dp"
+            android:text="User name"
             android:textStyle="bold"/>
 
 
@@ -42,9 +31,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="@dimen/text_margin"
-            android:text="11:30" />
+            android:layout_marginTop="@dimen/text_margin"
+            android:layout_marginEnd="@dimen/text_margin"
+            android:text="2020-09-15 11:30:15" />
 
 
         <TextView
@@ -52,11 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/contactNameTV"
-            android:layout_toEndOf="@id/userImageView"
-            android:layout_toRightOf="@id/userImageView"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="16dp"
             android:text="this is the last message sent" />
 
     </RelativeLayout>
