--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -122,7 +122,9 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="16dp"
-                android:text="EDIT PROFILE"
+                android:text="  EDIT PROFILE  "
+                android:background="@drawable/register_rounded_button"
+                android:textColor="@color/colorWhite"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.516"
                 app:layout_constraintLeft_toLeftOf="parent"
