--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,32 +24,33 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/img_container"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:layout_marginTop="16dp"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#FF000000"
-            android:layout_centerHorizontal="true" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/img_container"
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:layout_marginTop="16dp"
+                app:civ_border_width="2dp"
+                app:civ_border_color="#FF000000"
+                android:layout_centerHorizontal="true" />
 
-        <TextView
-            android:id="@+id/usernameTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_below="@+id/img_container"
-            android:layout_centerHorizontal="true"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            android:text="username"/>
+
+            <TextView
+                android:id="@+id/fullNameTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/img_container"
+                android:layout_marginTop="16dp"
+                android:layout_centerHorizontal="true"
+                android:text="full name"
+                android:gravity="center"
+                android:textSize="15sp"/>
 
 
             <TextView
                 android:id="@+id/contactNoTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/usernameTV"
+                android:layout_below="@+id/fullNameTV"
                 android:layout_marginTop="25dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -85,27 +86,15 @@
 
 
             <TextView
-                android:id="@+id/academicInfoTV"
+                android:id="@+id/academicStatusTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/emailTV"
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
-                android:text="Academics Information"
-                android:textSize="15sp"
-                android:textStyle="italic" />
-
-
-            <TextView
-                android:id="@+id/academicStatusTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/academicInfoTV"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="16dp"
                 android:layout_marginBottom="16dp"
                 android:gravity="center"
-                android:text="PhD candidate"
+                android:text="Academic Status: Masters"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -119,12 +108,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/academicStatusTV"
-                android:layout_alignParentEnd="true"
                 android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
-                android:text="  EDIT PROFILE  "
-                android:background="@drawable/register_rounded_button"
+                android:layout_marginStart="16dp"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"
+                android:text="EDIT PROFILE"
                 android:textColor="@color/colorWhite"
+                android:background="@drawable/register_rounded_button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.516"
                 app:layout_constraintLeft_toLeftOf="parent"
