--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -10,7 +10,18 @@
         android:id="@+id/feedListFragment"
         android:name="com.codefusiongroup.gradshub.feed.FeedListFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_feed_item_list" />
+        tools:layout="@layout/fragment_feed_item_list" >
+
+        <action
+            android:id="@+id/action_feedListFragment_to_groupPostCommentsFragment"
+            app:destination="@id/groupPostCommentsFragment"
+
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+
+    </fragment>
 
 
     <fragment
