updated authentication code base, some functionality not working.

--- a/app/src/main/res/navigation/authentication_navigation.xml
+++ b/app/src/main/res/navigation/authentication_navigation.xml
@@ -31,7 +31,7 @@
 
     <fragment
         android:id="@+id/resetPasswordFragment"
-        android:name="com.codefusiongroup.gradshub.authentication.login.ResetPasswordFragment"
+        android:name="com.codefusiongroup.gradshub.authentication.passwordReset.ResetPasswordFragment"
         android:label="fragment_reset_password"
         tools:layout="@layout/fragment_reset_password">
         <action
