--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,102 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id= "@+id/Launched"
-    tools:context=".authentication.login.LoginFragment" >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="formValidator"
+            type="com.codefusiongroup.gradshub.utils.validations.FormValidator" />
+
+        <variable
+            name="loginViewModel"
+            type="com.codefusiongroup.gradshub.authentication.login.LoginViewModel" />
+
+    </data>
 
 
-    <EditText
-        android:id="@+id/emailET"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/passwordET"
-        android:layout_marginBottom="16dp"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="48dp"
-        android:drawableStart="@drawable/ic_email"
-        android:ems="10"
-        android:hint="@string/email_hint"
-        android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="141dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id= "@+id/Launched"
+        tools:context=".authentication.login.LoginFragment" >
 
-    <EditText
-        android:id="@+id/passwordET"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/forgotPasswordBtn"
-        android:layout_marginBottom="20dp"
-        android:layout_centerHorizontal="true"
-        android:drawableStart="@drawable/ic_lock"
-        android:ems="10"
-        android:hint="@string/password_hint"
-        android:inputType="textPassword"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="203dp" />
 
-    <Button
-        android:id="@+id/forgotPasswordBtn"
-        android:layout_width="155dp"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@id/passwordET"
-        android:layout_above="@id/loginBtn"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/register_rounded_button"
-        android:text="@string/forgot_password_button"
-        android:textColor="@color/colorWhite"
-        tools:layout_editor_absoluteX="203dp"
-        tools:layout_editor_absoluteY="267dp" />
+        <EditText
+            android:id="@+id/emailET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/passwordET"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:hint="Email"
+            android:text="@={loginViewModel.email}"
+            app:emailValidator="@{loginViewModel.email}"
+            android:inputType="textEmailAddress"
+            android:drawableStart="@drawable/ic_email"
+            android:drawablePadding="10dp"/>
 
-    <Button
-        android:id="@+id/loginBtn"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_above="@id/noAccountTV"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/register_rounded_button"
-        android:text="@string/login_button"
-        android:textColor="@color/colorWhite"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="370dp" />
 
-    <TextView
-        android:id="@+id/noAccountTV"
-        android:layout_width="wrap_content"
-        android:layout_height="38dp"
-        android:layout_above="@id/registerBtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:text="@string/no_account_tv"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="433dp" />
+        <EditText
+            android:id="@+id/passwordET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/forgotPasswordBtn"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:hint="Password"
+            android:text="@={loginViewModel.password}"
+            app:passwordValidator="@{loginViewModel.password}"
+            android:inputType="textPassword"
+            android:drawableStart="@drawable/ic_lock"
+            android:drawablePadding="10dp"/>
 
-    <Button
-        android:id="@+id/registerBtn"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:background="@drawable/register_rounded_button"
-        android:text="@string/register_button"
-        android:textColor="@color/colorWhite"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="516dp" />
 
-    <ProgressBar
-        android:id="@+id/progress_circular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_alignBottom="@id/passwordET"
-        android:layout_centerHorizontal="true"
-        android:visibility="gone" />
+        <Button
+            android:id="@+id/forgotPasswordBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/passwordET"
+            android:layout_above="@id/loginBtn"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="32dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:background="@drawable/register_rounded_button"
+            android:text="@string/forgot_password_button"
+            android:textColor="@color/colorWhite"
+            tools:layout_editor_absoluteX="203dp"
+            tools:layout_editor_absoluteY="267dp" />
 
-</RelativeLayout>
+
+        <Button
+            android:id="@+id/loginBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/noAccountTV"
+            android:layout_alignEnd="@id/passwordET"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/register_rounded_button"
+            android:text="@string/login_button"
+            android:textColor="@color/colorWhite"
+            android:onClick="@{()->loginViewModel.onLoginClicked()}"
+            tools:layout_editor_absoluteX="56dp"
+            tools:layout_editor_absoluteY="370dp" />
+
+
+        <TextView
+            android:id="@+id/noAccountTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/registerBtn"
+            android:layout_marginBottom="16dp"
+            android:layout_centerHorizontal="true"
+            android:text="@string/no_account_tv"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            tools:layout_editor_absoluteX="110dp"
+            tools:layout_editor_absoluteY="433dp" />
+
+
+        <Button
+            android:id="@+id/registerBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/passwordET"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="100dp"
+            android:background="@drawable/register_rounded_button"
+            android:text="@string/register_button"
+            android:textColor="@color/colorWhite"
+            android:layout_alignParentBottom="true"
+            tools:layout_editor_absoluteX="56dp"
+            tools:layout_editor_absoluteY="516dp" />
+
+
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_alignBottom="@id/passwordET"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+
+</layout>
