--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -78,15 +78,17 @@
 
     <Button
         android:id="@+id/postBtn"
-        android:layout_width="155dp"
+        android:layout_width="126dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/postDescriptionET"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="41dp"
+        android:layout_marginEnd="265dp"
         android:background="@drawable/register_rounded_button"
         android:text="POST"
         android:textColor="@color/colorWhite" />
-
 
     <ProgressBar
         android:id="@+id/progress_circular"
