--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -45,16 +45,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/register_rounded_button"
+            android:onClick="@{()->resetPasswordViewModel.onRequestResetClicked()}"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:text="@string/send_request"
-            android:onClick="@{()->resetPasswordViewModel.onRequestResetClicked()}"
             android:textColor="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.054"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailET"
-            app:layout_constraintVertical_bias="0.108" />
+            app:layout_constraintVertical_bias="0.036" />
 
         <ProgressBar
             android:id="@+id/progress_circular"
