--- a/app/src/main/res/layout/fragment_feed_item_list.xml
+++ b/app/src/main/res/layout/fragment_feed_item_list.xml
@@ -1,35 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/feed_launched"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/refresh"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="feedViewModel"
+            type="com.codefusiongroup.gradshub.feed.FeedViewModel" />
+
+    </data>
+
+
+    <RelativeLayout
+        android:id="@+id/feed_launched"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-    <androidx.recyclerview.widget.RecyclerView
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-        android:id="@+id/feedList"
-        android:name="com.codefusiongroup.gradshub.feed.FeedListFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layoutManager="LinearLayoutManager"
-        tools:context=".feed.FeedListFragment"
-        tools:listitem="@layout/fragment_my_groups_post_item" />
+        <androidx.recyclerview.widget.RecyclerView
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            android:id="@+id/feedList"
+            android:name="com.codefusiongroup.gradshub.feed.FeedListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            app:layoutManager="LinearLayoutManager"
+            tools:context=".feed.FeedListFragment"
+            tools:listitem="@layout/fragment_my_groups_post_item" />
 
-    <ProgressBar
-        android:id="@+id/progress_circular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="visible" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-</RelativeLayout>
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="visible" />
+
+    </RelativeLayout>
+
+</layout>
